# pattern-recognition

./: .gitignore  hello.py  pattern.code-workspace  pyproject.toml
mini_proj1/: Assignment_1__Bayesian_classifier.ipynb  assignment_1__bayesian_classifier.py  mini_proj1.ipynb  tempCodeRunnerFile.py
mini_proj2/: mini_proj2.ipynb  pipeline.py  pl.ipynb
mini_proj3/: knn_clf.ipynb  nonparametric.ipynb
mini_proj3/Tiny_MNIST_Dataset/: Test_Data.csv  untitled.asv
mini_proj4/: mini_proj4.ipynb  retailMarketing(Original).csv
pattern/MiniProj1_Biomedical/: Assignment_1__Bayesian_classifier.ipynb
